# tests_cpp_ex3

./: CMakeLists.txt  README.md  SchoolSpamDetector  email-text  test_hashmap.cpp  tester.py
invalid/: empty_extra_col.db  empty_row_spaces.db  extra_col.db  non_integer_field.db
valid/: 00.db
